Fix background-attachment on mobile (iPad) devices

--- a/public/main.less
+++ b/public/main.less
@@ -276,6 +276,10 @@ section.title {
   background-attachment: fixed;
 }
 
+.mobile section.title {
+  background-attachment: inherit;
+}
+
 section.gallery {
   background: @color-bg;
 }
